--- a/Task_1/task1.html
+++ b/Task_1/task1.html
@@ -64,7 +64,14 @@
     </div>
     <div class="right-panel">Right Panel</div>
   </div>
-  <div class="footer">Footer</div>
+  <div class="footer">
+    <div>
+      <h3>Contact Us</h3>
+      <p>Phone: <a href="tel:+1234567890" style="color: #3a6133;">+1 234 567 890</a></p>
+      <p>Email: <a href="mailto:support@company.com" style="color: #3a6133 ;">support@company.com</a></p>
+      <p>Address: 123 Main Street, City Name, Country</p>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
