--- a/Task_1/task1.html
+++ b/Task_1/task1.html
@@ -67,8 +67,8 @@
   <div class="footer">
     <div>
       <h3>Contact Us</h3>
-      <p>Phone: <a href="tel:+1234567890" style="color: #3a6133;">+1 234 567 890</a></p>
-      <p>Email: <a href="mailto:support@company.com" style="color: #3a6133 ;">support@company.com</a></p>
+      <p>Phone: <a href="tel:+1234567890" style="color: #000000;">+1 234 567 890</a></p>
+      <p>Email: <a href="mailto:support@company.com" style="color: #000000 ;">support@company.com</a></p>
       <p>Address: 123 Main Street, City Name, Country</p>
     </div>
   </div>
